fuel-indexer-macros/test_data/fail_badschema.stderr
error: custom attribute panicked
  --> test_data/fail_badschema.rs:8:1
   |
8  | / #[indexer(
9  | |     abi = "./test_data/contracts-abi.json",
10 | |     namespace = "test_namespace",
11 | |     identifier = "foo",
12 | |     schema = "./test_data/badschema.graphql",
13 | | )]
   | |__^
   |
   = help: message: Schema definition not found!

error[E0433]: failed to resolve: use of undeclared type `Receipt`
  --> test_data/fail_badschema.rs:38:21
   |
38 |                     Receipt::Call {
   |                     ^^^^^^^ use of undeclared type `Receipt`

error[E0433]: failed to resolve: use of undeclared type `Receipt`
  --> test_data/fail_badschema.rs:49:21
   |
49 |                     Receipt::ReturnData {
   |                     ^^^^^^^ use of undeclared type `Receipt`

error[E0422]: cannot find struct, variant or union type `SomeEvent` in this scope
  --> test_data/fail_badschema.rs:26:13
   |
26 |     let s = SomeEvent {
   |             ^^^^^^^^^ not found in this scope

error[E0412]: cannot find type `BlockData` in this scope
  --> test_data/fail_badschema.rs:33:19
   |
33 |     let data: Vec<BlockData> = vec![
   |                   ^^^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::types::BlockData;
   |
2  | use fuel_indexer_schema::BlockData;
   |

error[E0422]: cannot find struct, variant or union type `BlockData` in this scope
  --> test_data/fail_badschema.rs:34:9
   |
34 |         BlockData {
   |         ^^^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::types::BlockData;
   |
2  | use fuel_indexer_schema::BlockData;
   |

error[E0425]: cannot find function `serialize` in this scope
  --> test_data/fail_badschema.rs:63:21
   |
63 |     let mut bytes = serialize(&data);
   |                     ^^^^^^^^^ not found in this scope
   |
help: consider importing one of these items
   |
2  | use fuel_indexer_plugin::types::serialize;
   |
2  | use fuel_indexer_schema::serialize;
   |
2  | use fuels::node::chain_config::serialization::serde_hex::serialize;
   |

error[E0425]: cannot find function `handle_events` in this scope
  --> test_data/fail_badschema.rs:68:5
   |
68 |     handle_events(ptr, len);
   |     ^^^^^^^^^^^^^ not found in this scope

warning: unused import: `Tokenizable`
  --> test_data/fail_badschema.rs:24:47
   |
24 |     use fuels_core::{abi_encoder::ABIEncoder, Tokenizable};
   |                                               ^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` on by default
